2005-11-09	Ingmar Schlecht	<ingmar@typo3.org>

	* Made TCEForms put <label> tags around icons for moving/deleting repetitive Flexform items

2005-11-01	Robert Lemke	<robert@typo3.org>

	* Added an is_array() check in t3lib_div::resolveSheetDefInDS() to prevent a fatal error in certain circumstances

2005-10-26  Kasper Skaarhoj  <kasper2005@typo3.com>

	* Implemented additional, simple API for logging to sys_log plus extended the sys-log with workspace awareness.
	* Implemented more workspace related features. In particular scripts like t3lib_tcemain and t3lib_userauthgroup have been heavily modified!

2005-10-21  Bernhard Kraft  <kraftb@kraftb.at>

	* Fixed a bug in t3lib/class.t3lib_page.php which broke the Direct Mailer

2005-10-19  Bernhard Kraft  <kraftb@kraftb.at>

	* Fixed a bug in t3lib/jsfunc.menu.js (base URL was also prepended when link is already absolute)
	* Fixed bug #200: fe_adminLib: hard-coded Form URL, should be typolink

2005-10-17  Kasper Skaarhoj  <kasper2005@typo3.com>

	* Fixed wrong page-not-found header from "Status: 404 ..." to "HTTP/1.0 404..."

2005-10-15  Michael Stucki  <michael@typo3.org>

	* Added a hook for adding new items in alt_topmenu_dummy.php (requested by Stig N. Faerch for his "roles" extension)
	* Added a JavaScript to the backend which makes it possible to use tabulator keys in textareas. Can be disabled by setting $BE_USER->uc['disableTabInTextarea'].
	* Added template support to indexed_search. Many thanks to Udo von Eynern for his great work!
	* Many other changes to indexed_search. For details, see typo3/sysext/indexed_search/ChangeLog.

2005-10-14  Andreas Otto  <andreas.otto@dkd.de>

	* Fixed bug #1594: In t3lib_matchCondition->match() it could be the case that $this->altRootline was not allways an array, but it is supposed to be an array. Therefore at the beginning of t3lib_matchCondition->match() the variable type is checked and an empty array is created if needed.
